# filamento

./: .ghci  .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project.freeze  current.gcode  filamento.cabal  fourmolu.yaml  index.json  jee-code.cabal  justfile  marlin.cabal  myprint.gcode  persistent-state.json  sample-pyramid.gcode
app/: Filament.hs  Filament2.hs  Filament3.hs  Filament4.hs  Filament5.hs  Main.hs  Octo.hs  PurgeTower.hs  Readme.hs  Repl.hs  SamplePyramid.hs  Sketch01.hs  Sketch02.hs  Sketch03.hs  Try.hs
current/: 0001-filament-Filament Change.gcode  0002-filament-Filament Change.gcode  0004-Filament Change.gcode  0005-Filament Change.gcode  0006-sketch-layers-0.gcode  0007-sketch-layers-1.gcode  0008-sketch-layers-2.gcode  0009-sketch-layers-3.gcode  0010-sketch-layers-4.gcode  0011-sketch-layers-5.gcode  0012-sketch-layers-6.gcode  0013-sketch-layers-7.gcode  0014-sketch-layers-8.gcode  0015-sketch-layers-9.gcode  0016-sketch-layers-10.gcode  0017-sketch-layers-11.gcode  0018-sketch-layers-12.gcode  0019-sketch-layers-13.gcode  0020-sketch-layers-14.gcode  0021-sketch-layers-15.gcode  0022-sketch-layers-16.gcode  0023-sketch-layers-17.gcode  0024-sketch-layers-18.gcode  0025-sketch-layers-19.gcode  0026-sketch-layers-20.gcode  0027-sketch-layers-21.gcode  0028-sketch-layers-22.gcode  0029-sketch-layers-23.gcode  0030-sketch-layers-24.gcode  0031-sketch-layers-25.gcode  0032-sketch-layers-26.gcode  0033-sketch-layers-27.gcode  0034-sketch-layers-28.gcode  0035-sketch-layers-29.gcode  0036-sketch-layers-30.gcode  0037-sketch-layers-31.gcode  0038-sketch-layers-32.gcode  0039-sketch.gcode
docs/: gcode-viewer.html  sample.gcode
gcode-viewer/: package-lock.json  package.json  vite.config.ts
gcode-viewer/purs/: justfile  package-lock.json  package.json  spago.yaml
gcode-viewer/purs/scripts/: generate-exports.mjs
gcode-viewer/purs/src/: Main.purs  Named.purs
gcode-viewer/purs/src/GCodeViewer/: Api.purs  Error.purs  Lib.purs  Prelude.purs  RemoteData.purs  State.purs  StateMachine.purs  TagName.purs  TsBridge.purs
gcode-viewer/purs/src/GCodeViewer/StateMachines/: App.purs  Viewer.purs
gcode-viewer/purs/src/Stadium/: Core.purs  React.js  TL.purs
gcode-viewer/src/: App.tsx  GCodeViewer.tsx  Lib.ts  main.tsx  style.css
gcode-viewer/src/ConfigBox/: ConfigBox.tsx  index.ts
gcode-viewer/src/Slider/: Slider.tsx
src/: Filamento.hs  JeeCode.hs
src/Filamento/: Classes.hs  Conversions.hs  Core.hs  Debug.hs  Error.hs  Filament.hs  IO.hs  Lib.hs  Math.hs  Octo.hs  TypeOps.hs  Types.hs
src/Filamento/Classes/: Abs.hs  Distance.hs  Move.hs
src/Filamento/Factory/: V1.hs
src/Filamento/Types/: Contexts.hs  Delta.hs  Delta2D.hs  Delta3D.hs  Displacement.hs  Displacement2D.hs  Displacement3D.hs  Distance.hs  Duration.hs  Frequency.hs  Geometry.hs  MeasureUnits.hs  Position.hs  Position2D.hs  Position3D.hs  Proportion.hs  Quantities.hs  Speed.hs  Temperature.hs  Trivial.hs
src/Filamento/Types/Continous/: AbsFactor.hs  Factor.hs  NonNegativeFactor.hs
src/Filamento/Types/Geometry/: Area.hs  Circle2D.hs  Line2D.hs  Rect2D.hs  Square2D.hs  Volume.hs
src/Filamento/Types/Quantities/: Delta.hs  Duration.hs  Length.hs  Position.hs
src/Marlin/: Comment.hs  Core.hs  DSL.hs  Lib.hs  Math.hs  Syntax.hs
src/Marlin/MkFilament/: V1.hs
src/Octo/: API.hs
test/: Spec.hs
test/Filamento/Types/: DeltaSpec.hs
