cabal-version: 3.8
name: marlin
version: 0.1.0.0
license: NONE
author: Michael Bock
maintainer: no-day@posteo.net
build-type: Simple
extra-doc-files: CHANGELOG.md

common flags
  ghc-options: -Wall

common extensions
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: flags, extensions
  exposed-modules:
    Filamento
    Filamento.Classes
    Filamento.Core
    Filamento.Factory.V1
    Filamento.IO
    Filamento.Lib
    Filamento.Math
    Filamento.Types
    Marlin.Comment
    Marlin.Core
    Marlin.Syntax

  build-depends:
    aeson ^>=2.2.3.0,
    base ^>=4.17.2.1,
    convertible,
    linear,
    mtl,
    newtype,
    random,
    relude,

  hs-source-dirs: src
  default-language: Haskell2010

executable filamento-exe
  import: flags, extensions
  main-is: Main.hs
  other-modules:
    Filament5
    PurgeTower
    Sketch03
    Try

  hs-source-dirs: app
  build-depends:
    aeson,
    base,
    http-client,
    lens,
    lens-aeson,
    linear,
    marlin,
    mtl,
    random,
    relude,
    req,

  default-language: Haskell2010
