cabal-version: 3.8
name: filamento
version: 0.1.0.0
license: NONE
author: Michael Bock
maintainer: no-day@posteo.net
build-type: Simple
extra-doc-files: CHANGELOG.md

common flags
  ghc-options: -Wall

common extensions
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: flags, extensions
  exposed-modules:
    Filamento
    Filamento.Classes
    Filamento.Core
    Filamento.Factory.V1
    Filamento.IO
    Filamento.Lib
    Filamento.Math
    Filamento.TypeOps
    Filamento.Types
    Marlin.Comment
    Marlin.Core
    Marlin.Syntax

  build-depends:
    aeson >=2.2.3 && <2.3,
    aeson-pretty >=0.8.10 && <0.9,
    base >=4.17.2 && <4.18,
    convertible >=1.1.1 && <1.2,
    linear >=1.23.2 && <1.24,
    mtl >=2.2.2 && <2.3,
    newtype >=0.2.2 && <0.3,
    random >=1.3.1 && <1.4,
    relude >=1.2.2 && <1.3,
    pretty-simple >=4.0.0 && <4.1,

  hs-source-dirs: src
  default-language: Haskell2010

executable filamento-exe
  import: flags, extensions
  main-is: Main.hs
  other-modules:
    PurgeTower
    Sketch03
    Try

  hs-source-dirs: app
  build-depends:
    aeson >=2.2.3 && <2.3,
    base >=4.17.2 && <4.18,
    filamento,
    http-client >=0.7.19 && <0.8,
    lens >=5.3.5 && <5.4,
    lens-aeson >=1.2.3 && <1.3,
    linear >=1.23.2 && <1.24,
    mtl >=2.2.2 && <2.3,
    random >=1.3.1 && <1.4,
    relude >=1.2.2 && <1.3,
    req >=3.13.4 && <3.14,

  default-language: Haskell2010

test-suite filamento-test
  import: flags, extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Filamento.Types.DeltaSpec

  hs-source-dirs: test
  build-depends:
    QuickCheck >=2.14.0 && <2.17,
    base >=4.17.2 && <4.18,
    filamento,
    hspec >=2.11.0 && <2.12,
    hspec-core >=2.11.0 && <2.12,
    linear >=1.23.2 && <1.24,
    relude >=1.2.2 && <1.3,

  default-language: Haskell2010
