cabal-version:   3.12
name:            jee-code
version:         0.1.0.0
license:         NONE
author:          Michael Bock
maintainer:      no-day@posteo.net
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  JeeCode
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable jee-code-exe
    main-is:             Main.hs
    hs-source-dirs:      app
    build-depends:       base, jee-code
    default-language:    Haskell2010
