cabal-version: 3.8
name: marlin
version: 0.1.0.0
license: NONE
author: Michael Bock
maintainer: no-day@posteo.net
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall
  default-extensions:
    BlockArguments
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

library
  import: warnings
  exposed-modules:
    Marlin.Core
    Marlin.DSL
    Marlin.Lib
    Marlin.Math
    Marlin.Syntax

  build-depends:
    aeson ^>=2.2.3.0,
    base ^>=4.17.2.1,
    linear,
    mtl,
    random,
    relude,

  hs-source-dirs: src
  default-language: Haskell2010

executable marlin-exe
  import: warnings
  main-is: Main.hs
  other-modules:
    Filament
    Filament2
    Filament3
    Filament4
    Filament5
    Sketch01
    Sketch02
    Sketch03
    Try

  hs-source-dirs: app
  build-depends:
    aeson,
    base,
    http-client,
    lens,
    lens-aeson,
    linear,
    marlin,
    mtl,
    random,
    relude,
    req,

  default-language: Haskell2010
